force-app/main/default/objects/Service_Team_Member__c/Service_Team_Member__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Service Team Member</label>
    <nameField>
        <displayFormat>ServiceTeamMember-{0000}</displayFormat>
        <label>Service Team Member #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>