force-app/main/default/objects/Service_Team_Member__c/fields/ExpUnique__c.field-meta.xml
<CustomField>
    <fullName>ExpUnique__c</fullName>
    <externalId>true</externalId>
    <label>ExpUnique</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>