force-app/main/default/objects/Service_Team_Member__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>Set by workflow.</description>
    <inlineHelpText>The date that Status was set to Inactive.</inlineHelpText>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>