force-app/main/default/objects/Service_Team_Member__c/fields/Provides_Service__c.field-meta.xml
<CustomField>
    <fullName>Provides_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked the team member is listed on the service entry screen.</inlineHelpText>
    <label>Provides Service</label>
    <type>Checkbox</type>
</CustomField>