force-app/main/default/objects/Service_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bio family</fullName>
            </value>
            <value>
                <fullName>CASA/GAL</fullName>
            </value>
            <value>
                <fullName>Case Aid</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Case Manager (External Agency)</fullName>
            </value>
            <value>
                <fullName>Case Owner</fullName>
            </value>
            <value>
                <fullName>Educational Advocate</fullName>
            </value>
            <value>
                <fullName>Foster Parent</fullName>
            </value>
            <value>
                <fullName>ILS case manager</fullName>
            </value>
            <value>
                <fullName>Psychiatrist</fullName>
            </value>
            <value>
                <fullName>SAY treatment provider</fullName>
            </value>
            <value>
                <fullName>State/County/Tribe/ILP – Assigned Case Manager</fullName>
            </value>
            <value>
                <fullName>State Social Worker</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
            <value>
                <fullName>Therapist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>