force-app/main/default/objects/Service_Team_Member__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Internal staff member.</inlineHelpText>
    <label>Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treatment_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>