force-app/main/default/objects/Service_Team_Member__c/fields/Staff_Contact__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Staff or team member who are not logged in to the system or considered external users.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Treatment_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>