force-app/main/default/objects/Service_Team_Member__c/fields/Subscribe__c.field-meta.xml
<CustomField>
    <fullName>Subscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When a team member record is created with a user and case record, this field determines whether they are added as a subscriber to the case record Chatter feed.</inlineHelpText>
    <label>Subscribe</label>
    <type>Checkbox</type>
</CustomField>